<resources>
    <string name="app_name">Films</string>
    <string name="film1">Такси</string>
    <string name="film2">Такси 2</string>
    <string name="film3">Такси 3</string>
    <string name="film4">Такси 4</string>
    <string name="btn_details">Детали</string>
    <string name="film1_description">Молодой таксист Даниэль помешан на быстрой езде. Как ураган, проносится он по извилистым улицам Марселя на своём мощном ревущем звере «Пежо», пугая пассажиров и прохожих. Неподкупный полицейский Эмильен вынуждает его помочь в поимке банды грабителей, ускользающих от полиции на своих неуловимых «Мерседесах». И до самого конца не ясно, кто же сможет удержаться на крутом вираже.</string>
    <string name="film2_description">Во Францию прибывает министр обороны Японии. Цель его визита - ознакомиться с французским опытом борьбы с терроризмом и подписать «контракт века» о взаимном сотрудничестве.

Неожиданно во время показательных выступлений французской полиции министра обороны похищают якудза, желающая сорвать заключение наиважнейшего контракта. Даниэль и Эмильен отправляются на поиски высокого гостя. В дело вступает уже хорошо знакомое нам такси.</string>
    <string name="film3_description">В канун Рождества банда Санта-Клаусов разграбляет Марсель. Комиссар полиции задумал крупную операцию под кодовым названием «Снеговик», главные роли в которой отведены таксисту Даниелю и полицейскому Эмильену. Но на своём такси те вытворяют такое, что вреда от них может быть больше, чем от самих преступников.</string>
    <string name="film4_description">Преступника №1 транспортируют из Бельгии в Конго ... через Марсель. Всего несколько часов самый опасный человек в мире, надежно упакованный в скафандр и железную клетку, должен пробыть в полицейском участке комиссара Жибера.</string>

    <string name="share">Поделиться</string>
    <string name="add">Добавить фильм</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главный экран</string>
    <string name="menu_info">О приложении</string>
    <string name="menu_fav">Избранное</string>
    <string name="menu_exit">Выход</string>

    <string name="hint_title">Название фильма</string>
    <string name="hint_description">Описание фильма</string>

    <string name="app_info">Приложение "Кино" версии 1.0.0. Автор: Виталий Ленчук</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>